# new-beginning

./: .env.example  .gitignore  .prettierignore  BACKEND.md  BACKEND_NOTES.md  CHANGELOG.md  Enterprise-CSS-Architecture-and-Responsive-Systems-Mastery.html  Enterprise-Nodejs-Mastery.html  Enterprise-Python-Mastery.html  Frontend-Engineering-Vol-1-Foundations.html  Frontend-Engineering-Vol-2-Reactivity-and-Building-Blocks.html  Frontend-Engineering-Vol-3-Components-and-Composition.html  Frontend-Engineering-Vol-4-Routes-Data-and-Production.html  Frontend-Engineering-Vol-5-CSS-Architecture-and-Visual-Engineering.html  STACK.md  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.ts
backend/: .gitignore  Cargo.toml  README.md  deny.toml  docker-compose.dev.yml  justfile
backend/.sqlx/: query-023f9e8c1e5d4c0a69315a4aab848e922a8d43a08327d3f9d2a744a0152e32c5.json  query-03f5e56c32c35ceeaf88c7673e3bbc04a731a0ba3566d56782137da644da1958.json  query-040092a838324767ca41a1629a72c4a574a9f40ec7c61f3bf6582a6962692053.json  query-073fdb9e7d1084cbe8e26d9f575d2784660642ab66ebb2c942ef853a49121247.json  query-0743923838b4b64f2bc0cce2dadd5d9017eef0df429761385833fbbf91d40528.json  query-0a2681fefb84b5069efa13ea2d2c5f9eaa8dfdbb0bcafbdd5c552d3b2d028c12.json  query-0cc614233e031748a1d3821fcf335ea05fb6acfeeb2cc0278de30df320ee9e4e.json  query-0e2a05e4bc64f7c305fee735865a7d3475fc49c21974c90cc72eb494d742a287.json  query-11639582567480fb11513c29a9f3b4e973216c3ef27dcafacdeef5726ecb035c.json  query-122e1cd67ace9e6d9137943ffb1f2d153da88d2313681a56b4157f016d5ea884.json  query-135fd92825b749fcd24674330c3d7fad18bd538fc6b530e9c3be1b33bfe85f7c.json  query-145c54b844096c65250c70769bff1df17ae6d62ad6b6195969297a034d780556.json  query-18cca967e1160a8320b5ee709840a058a03a75b620672b24c409cbf116db7b5f.json  query-1926ba8543d781cd51a5a9f7665ffa5937bc40b3a1857f6fcb892a9c67ce7535.json  query-1c9c0a718736ed9abda48752fe2187b61677094ee08192c7fd2a95fcf7202b11.json  query-245bebe88bb78637d1c717987c32e9e6b3d91a973f42a253942c7850332b9eba.json  query-2c8c4c524898428ebd12fccc14b41204d3c0cada3325fd0a3f69475834438829.json  query-2c91c5216fb4330438ea659ffd8a0691fe7f98d151b6dd402ff2ce73711aa4ed.json  query-2f1024a908b86d6eb96cc7f35d2d33c2b834a48d0c5b3d14aff75322dc3c5d0b.json  query-31660b3d99239ce4d8460e7cd3ed42a3e84b1f15c589b09f42af28b151b1b255.json  query-3318f80f625c85e2167ba4f50e40f119a1795a294a74beedc17bf5f6a85973b4.json  query-35d114b8d6a594c506114db1f3c3ae8b8457b80072ff7d7f437acd8fcd172c41.json  query-3cc138c63f6e91cfd0478f3cbd52d6aeb603efba1e0132703e277ef938aeef3c.json  query-3e7d4deaf352d64decb7e9cb3558599c6d317a4a19a0f1db6d368c044cfb2230.json  query-42f8f727720016967f0d08a6ae3001445ace359d614200d3bdc9895ecd070110.json  query-47d446c04ce9b9db3a8366c0f36949219b22815480ad6d50c7f95c0696a852e5.json  query-4807854d8cec513b2d368c6ffe8491bdebcedd8cb2526b196fc0d8a9d77c38e8.json  query-4a891f1aefc13f44c0fc204eba188070cb75a739f749d0b4f64b23daa9899b74.json  query-4b028b4fc3359e584b6fcb68d48379a626528ca3eaabffba623c2c2a3457c548.json  query-4ebf637c63b3b27bd0c99310645af784220ba809f9133fe903c77043790575c5.json  query-4f0cab08526d8ccd4e817db606f3319f956bbda39ae8a32379ddde805ffe9ffe.json  query-4f0e999a3881398537469cfd8672adb5192a78362bf1d0aa6b9f7501576901d9.json  query-503c766b6c9a60654078d89a10b923127b0994ee0feaa6e749f445c44fe9459a.json  query-5129c8ec3caedaf666f59096cffa271dc92b1bcc3340cf8d01e1bbb442f968db.json  query-545da66c2027476e8fedfa08b6e5fc34041d470c0c80acdbb7df0a90146232e2.json  query-555c4b97ef00b45fda68e30384b146c4aa75b8da12e5d08f273d27f9a832b709.json  query-5742e3875870df58ed19f264906b66b8ae443d59c86b436e043a5a6fcdf00078.json  query-575e54db6d2860ead7dce073e6c537e936ed3c648727100938a75d366b1003c9.json  query-58bbde16497ae6b9d22a4b247cd0988677607c16e80f749f4b7b8a214e190e65.json  query-5b0de2863880f8079e22511f6a55e3cab797855f9affc10d084ed98625192199.json  (+66 more)
backend/bins/api/: Cargo.toml
backend/bins/api/src/: main.rs
backend/bins/seeder/: Cargo.toml
backend/bins/seeder/src/: main.rs
backend/bins/worker/: Cargo.toml
backend/bins/worker/src/: main.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: alerts.rs  config.rs  deserialize.rs  error.rs  ids.rs  lib.rs  money.rs  readiness.rs  request_id.rs
backend/crates/http/: Cargo.toml
backend/crates/http/src/: app.rs  lib.rs  state.rs
backend/crates/http/tests/: account_deletion_integration.rs  admin_grant_integration.rs  billing_invoices_integration.rs  courses_integration.rs  indicators_downloads_integration.rs  notifications_integration.rs  refund_flow_integration.rs  worker_invoice_pdf_integration.rs
backend/crates/observability/: Cargo.toml
backend/crates/observability/src/: lib.rs
backend/crates/r2-client/: Cargo.toml
backend/crates/r2-client/src/: api.rs  keys.rs  lib.rs  recording.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: audit.rs  contact_messages.rs  course_progress.rs  downloads.rs  entitlements.rs  (+15 more)
backend/crates/stripe-client/: Cargo.toml
backend/docs/launch-evidence/: pr-01-skeleton.md  pr-02-migrations-storage-seeder.md  pr-03-auth.md  pr-04-me.md  pr-05-totp.md  pr-06-public-surface.md  pr-07-stripe-skeleton.md  pr-08-entitlements.md  pr-09-portal-and-subscription-handlers.md  pr-10-r2-invoices.md  pr-11-worker-indicators-downloads.md  pr-12-courses.md  pr-13-notifications.md  pr-14-admin.md  pr-15-refund.md  pr-16-export-deletion.md  pr-17-cutover.md
backend/migrations/: 0001_extensions.sql  0002_users.sql  0003_sessions.sql  0004_email_verifications.sql  0005_products.sql  0006_subscription_plans.sql  0007_subscriptions.sql  0008_orders.sql  0009_order_items.sql  0010_invoices.sql  0011_payment_methods.sql  0012_billing_addresses.sql  0013_enrollments.sql  0014_course_progress.sql  0015_licenses.sql  0016_downloads.sql  0017_notifications.sql  0018_leads_contact.sql  0019_stripe_events.sql  0020_audit_log.sql  0021_background_jobs.sql  0022_downloads_catalog_unique.sql
backend/seeds/: catalog.json
(+210 files in other folders)
