[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/observability",
    "crates/http",
    "crates/storage",
    "crates/stripe-client",
    "crates/r2-client",
    "bins/api",
    "bins/seeder",
    "bins/worker",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
# No `license = ...` — workspace crates are private (`publish = false`).
# `cargo-deny` is configured (`[licenses.private] ignore = true`) to skip
# license checks for them. Third-party deps are still gated by the allow-list
# in deny.toml.
publish = false

[workspace.dependencies]
# Async runtime + HTTP
tokio = { version = "1.42", features = ["full"] }
axum = { version = "0.8", features = ["macros", "json", "tokio"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = [
    "trace", "compression-gzip", "request-id",
    "timeout", "limit", "catch-panic"
] }
hyper = "1.5"

# Database
sqlx = { version = "0.8", features = [
    "postgres", "runtime-tokio-rustls", "macros",
    "uuid", "time", "json", "migrate", "ipnetwork",
    # `bigdecimal` covers NUMERIC(3,2) for `products.rating_value`.
    "bigdecimal"
] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Crypto / auth
secrecy = { version = "0.10", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
rand = "0.8"
base64 = "0.22"
ipnet = "2"
totp-rs = { version = "5.6", features = ["otpauth", "qr"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }

# Time / IDs
time = { version = "0.3", features = ["serde", "macros"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Errors
thiserror = "2"
anyhow = "1"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Config
figment = { version = "0.10", features = ["env", "toml"] }

# Utility
async-trait = "0.1"
bytes = "1"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
once_cell = "1"
tokio-util = { version = "0.7", features = ["rt"] }
governor = "0.7"
dashmap = "6"

# Workspace-internal
common = { path = "crates/common" }
observability = { path = "crates/observability" }
http-crate = { path = "crates/http", package = "tradeflex-http" }
storage = { path = "crates/storage" }
stripe-client = { path = "crates/stripe-client" }
r2-client = { path = "crates/r2-client" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
# Faster iteration; keep symbols.
debug = 1
