[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
observability = { workspace = true }
http-crate = { workspace = true }
storage = { workspace = true }
stripe-client = { workspace = true }
r2-client = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
