[package]
name = "r2-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
common = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
time = { workspace = true }
rusty-s3 = "0.7"

[dev-dependencies]
tokio = { workspace = true }
