[package]
name = "storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
common = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bigdecimal = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
