[package]
name = "stripe-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
hex = "0.4"
bytes = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
